objects/CMF_Info__c.object
<CustomObject>
    <description>Core BU based identifier numbers</description>
    <fields>
        <fullName>ACT_Create_Date__c</fullName>
        <description>ACT Create Date</description>
        <label>ACT Create Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ACT_Modified_Date__c</fullName>
        <description>ACT Modified Date</description>
        <label>ACT Modified Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ACT_Owner__c</fullName>
        <label>ACT Owner</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AKA_Name__c</fullName>
        <label>AKA Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>CMF Info</relationshipLabel>
        <relationshipName>R00N40000001leBEEAY</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Bill_CMF_Status__c</fullName>
        <label>Bill CMF Status</label>
        <picklist>
            <picklistValues>
                <fullName>A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>I</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Bill_CMF__c</fullName>
        <label>Bill CMF</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Buy_Sell__c</fullName>
        <label>Buy/Sell</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CDK_Rebranding_Status__c</fullName>
        <label>CDK Rebranding Status</label>
        <picklist>
            <picklistValues>
                <fullName>Burned</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Installed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CMF_Replaced__c</fullName>
        <label>CMF Replaced</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <label>Case #</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Classification__c</fullName>
        <label>Classification</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_File_Location__c</fullName>
        <label>Client File Location</label>
        <picklist>
            <picklistValues>
                <fullName>Client File Cabinet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inactive Client File Cabinet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lookup User</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Off Site</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Collector__c</fullName>
        <label>Collector</label>
        <length>240</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Combo_Font__c</fullName>
        <label>Combo Font</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Conditional_A_R_Statement_Install_Date__c</fullName>
        <label>Conditional A/R Statement Install Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Conditional_A_R_Statement__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Conditional A/R Statement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Creator__c</fullName>
        <label>Oracle Creator</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Warehouse__c</fullName>
        <formula>hyperlink(&quot;http://dsiishe.hoffman.ds.adp.com/DwWeb/GUI/CustomerDetail.aspx?cmf=&quot; &amp; Ship_CMF__c, &quot;Data Warehouse&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Data Warehouse</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EFD_Branch__c</fullName>
        <label>EFD Branch</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EFD_Installed__c</fullName>
        <label>EFD Installed</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Estimated_Install_Date__c</fullName>
        <label>Estimated Install Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Font__c</fullName>
        <label>Font</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Group_Status__c</fullName>
        <label>Group/Status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Key_CAM_Email__c</fullName>
        <label>Key CAM Email</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Key_CAM__c</fullName>
        <label>Key CAM</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LS_1200__c</fullName>
        <label>LS 1200</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LS_1300__c</fullName>
        <label>LS 1300 #</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LS_1800_2000_1500__c</fullName>
        <label>LS 1800/2000/1500</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LS_1900__c</fullName>
        <label>LS 1900</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LS_1920_with_flash__c</fullName>
        <label>LS 1920 (with flash)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LS_3000_1520__c</fullName>
        <label>LS 3000/1520</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LS_4000_Downloads__c</fullName>
        <label>LS 4000 Downloads</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LS_4000_w_Flash__c</fullName>
        <label>LS 4000 w/Flash</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LS_5000_w_Flash__c</fullName>
        <label>LS 5000 w/Flash</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Language__c</fullName>
        <label>Language</label>
        <picklist>
            <picklistValues>
                <fullName>English</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>French</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spanish</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Laser_Artwork_Specialist__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>LAS Users only</description>
        <inlineHelpText>You can only search for LAS users.</inlineHelpText>
        <label>Laser Artwork Specialist</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <filterItems>
                <field>User.Profile.Name</field>
                <operation>equals</operation>
                <value>ADPDS - Laser - LAS</value>
            </filterItems>
            <filterItems>
                <field>User.Profile.Name</field>
                <operation>equals</operation>
                <value>ADPDS - Laser - RRP</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>CMF_Info_LAS</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Logon_Prefix__c</fullName>
        <label>Logon Prefix</label>
        <length>11</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Main_CMF_Business_Unit_Code__c</fullName>
        <label>Main CMF - Business Unit Code</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Main_CMF_Business_Unit__c</fullName>
        <label>Main CMF - Business Unit</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Main_CMF_Region_Code_Name__c</fullName>
        <label>Main CMF - Region Code Name</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Main_CMF_Region_Code__c</fullName>
        <label>Main CMF - Region Code</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Main_CMF_Status__c</fullName>
        <label>Main CMF Status</label>
        <picklist>
            <picklistValues>
                <fullName>A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>I</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Main_CMF__c</fullName>
        <label>Main CMF</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Migration_ID__c</fullName>
        <externalId>true</externalId>
        <label>Migration_ID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Multisite_Dealer__c</fullName>
        <label>Multisite Dealer</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Network_Solution__c</fullName>
        <formula>hyperlink(&quot;http://www.networksolutions.ds.adp.com/VerifyGetWired/GetWiredCustomerDetail.cfm?cmf=&quot; &amp;  Ship_CMF__c , &quot;Network Solutions&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Network Solution</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Dealer_Name__c</fullName>
        <label>New Dealer Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Oracle_CMF_Create_Date__c</fullName>
        <description>Only for back-end</description>
        <label>Oracle CMF Create Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Pod__c</fullName>
        <label>Pod #</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prev_CMF__c</fullName>
        <description>Prev CMF #</description>
        <label>Prev CMF #</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prev_Main_CMF__c</fullName>
        <label>Prev Main CMF #</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prev_Name__c</fullName>
        <label>Prev Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>R815__c</fullName>
        <label>R815?</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rev__c</fullName>
        <label>Rev</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SLX_Dealer_CMF_CreateDate__c</fullName>
        <label>SLX Dealer CMF CreateDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SLX_Dealer_CMF_ID__c</fullName>
        <label>SLX Dealer CMF ID</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Segment_Code_del__c</fullName>
        <label>Segment Code</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Segment_Name__c</fullName>
        <label>Segment Name</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Edge_Client_Install_Date__c</fullName>
        <label>Service Edge Client Install Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Service_Edge_Client__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Service Edge Client</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ship_CMF_Business_Unit_Code__c</fullName>
        <label>Ship CMF - Business Unit Code</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_CMF_Business_Unit__c</fullName>
        <label>Ship CMF Business Unit</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_CMF_Region_Code_Name__c</fullName>
        <label>Ship CMF Region Code Name</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_CMF_Region_Code__c</fullName>
        <label>Ship CMF - Region Code</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_CMF__c</fullName>
        <externalId>true</externalId>
        <label>Ship CMF</label>
        <length>8</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Special_Instructions__c</fullName>
        <label>Special Instructions</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>I</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Vision_Cases__c</fullName>
        <formula>hyperlink(&quot;http://dsorbit1he.ds.ad.adp.com/ReportserverSQL2005?%2fVision%2fCase+Results+and+History+by+CMF&amp;varCMF=&quot; &amp; Ship_CMF__c &amp; &quot;&amp;rs:Command=Render&quot;, &quot;Vision Cases&quot;)</formula>
        <inlineHelpText>Link to report viewing Vision Cases for CMF in last 30 days</inlineHelpText>
        <label>Vision Cases</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ePayments_Client__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ePayments Client</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>eSignature_Client_Install_Date__c</fullName>
        <label>eSignature Client Install Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>eSignature_Client__c</fullName>
        <defaultValue>false</defaultValue>
        <label>eSignature Client</label>
        <type>Checkbox</type>
    </fields>
    <label>CMF Info</label>
    <listViews>
        <fullName>AllCMFs</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Ship_CMF__c</columns>
        <columns>Ship_CMF_Business_Unit__c</columns>
        <columns>Status__c</columns>
        <columns>Main_CMF__c</columns>
        <columns>Data_Warehouse__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>equals</operation>
            <value>76179208</value>
        </filters>
        <label>All - CMFs</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_CMFs1</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Ship_CMF__c</columns>
        <columns>Ship_CMF_Business_Unit__c</columns>
        <columns>Status__c</columns>
        <columns>Main_CMF__c</columns>
        <columns>Data_Warehouse__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All - CMFs</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>CMF Info</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CMF Info</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>CMF_Info_ReadOnly</fullName>
        <active>true</active>
        <description>This field is read only for Laser reps.</description>
        <errorConditionFormula>AND(
CONTAINS(UPPER($Profile.Name), &quot;LASER&quot;) , ISCHANGED(Name)
)</errorConditionFormula>
        <errorDisplayField>Name</errorDisplayField>
        <errorMessage>This field cannot be changed.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Change_CDK_Branding_to_Installed</fullName>
        <active>true</active>
        <description>RQ-04885 - validation rule to &quot;CDK Branding Status&quot; that only allows to change to &quot;Installed&quot; if current status is &quot;Burned&quot;.</description>
        <errorConditionFormula>IF( 
AND(NOT(BEGINS($User.Username,&quot;integration_user@adp.com&quot;)),
NOT(ISPICKVAL(PRIORVALUE(CDK_Rebranding_Status__c), &quot;Burned&quot;)), 
ISPICKVAL(CDK_Rebranding_Status__c, &quot;Installed&quot;)), TRUE, FALSE)</errorConditionFormula>
        <errorDisplayField>CDK_Rebranding_Status__c</errorDisplayField>
        <errorMessage>&quot;CDK Branding Status&quot; that only allows to change to &quot;Installed&quot; if current status is &quot;Burned&quot;.</errorMessage>
    </validationRules>
</CustomObject>